# alphacogant

./: .codegraph  .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  ISA.md  LICENSE  README.md  codemeta.json  pyproject.toml
docs/: AGENTS.md  README.md  active_inference_dictionary.md  api_reference.md  architecture.md  claim_boundaries.md  cogant_bridge.md  efe_and_policy.md  extending_the_model.md  figures_and_artifacts.md  generative_model_contract.md  glossary.md  methods_and_artifacts.md  rendering_and_validation.md  testing_contract.md  trsi_statistics.md  whitepaper_concepts.md
manuscript/: 00_abstract.md  01_introduction.md  02_active_inference_mapping.md  03_gnn_via_cogant.md  04_generative_model_inference.md  05_epistemic_and_pragmatic_value.md  06_integrity_and_functionality.md  07_conclusion.md  08_formalisms.md  09_limitations.md  99_references.md  README.md  config.yaml  preamble.md  references.bib
models/: alphafund_ewm.md
scripts/: run_alphacogant_demo.py  y_generate_figures.py  z_generate_manuscript_variables.py
scripts/figures/: fig_aif_dictionary.py  fig_belief_trajectory.py  fig_break_even_probability.py  fig_certificate_sign_flip.py  fig_cover_art.py  fig_create_vs_decay_scatter.py  fig_efe_waterfall.py  fig_gnn_factor_graph.py  fig_marginal_return_heatmap.py  fig_policy_posterior.py  fig_regime_comparison.py  fig_self_forecasting_loop.py  fig_theta_decay.py  fig_trsi_densities.py  fig_trsi_sensitivity.py  fig_value_by_regime.py
src/alphacogant/: SPEC.md  __init__.py  channels.py  cogant_bridge.py  free_energy.py  generative_model.py  manuscript_variables.py  operating_points.py  plot_style.py  sensitivity.py  simulation.py  statistics.py  t_rsi.py
src/alphacogant/bridge/: __init__.py  cogant_bridge.py
src/alphacogant/efe/: __init__.py  free_energy.py
src/alphacogant/model/: __init__.py  channels.py  generative_model.py  operating_points.py
src/alphacogant/stats/: __init__.py  sensitivity.py  simulation.py  statistics.py
src/alphacogant/tokens/: __init__.py  manuscript_variables.py
src/alphacogant/trsi/: __init__.py  t_rsi.py
src/alphacogant/viz/: __init__.py  plot_style.py
tests/: __init__.py  conftest.py  test_channels.py  test_cogant_bridge.py  test_cogant_round_trip.py  test_docs_contract.py  test_figure_scripts.py  test_free_energy.py  test_generative_model.py  test_manuscript_contract.py  test_manuscript_variables.py  test_operating_points.py  test_plot_style.py  test_property_invariants.py  test_scripts.py  test_sensitivity.py  test_simulation.py  test_statistics.py  test_t_rsi.py  test_t_rsi_helpers.py  test_validation_edge_cases.py  test_validation_paths.py
