# AlphaCOGANT — Active Inference model of the AlphaFund self-improving corporation.
# Inherits workspace settings from the template root pyproject.toml.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alphacogant"
version = "1.0.1"
description = "GNN-via-COGANT Active Inference model of recursive corporate self-improvement (AlphaFund)"
authors = [
    {name = "Daniel Ari Friedman", email = "daniel@activeinference.institute"},
    {name = "Tucker Cahill Chambers"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# --timeout is a hang-breaker: 300s is far above any healthy test (the slowest
# real test is a ~20s figure subprocess) so it only fires on a genuine stall.
addopts = "-v --tb=short --strict-markers --timeout=300"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "*/__init__.py", "*/test_*.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"scripts/figures/*" = ["E402"]  # matplotlib.use() before pyplot import pattern

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.uv]
